# HospitAI

./: LICENSE  README.md  frontend.py  medical.db  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/rag_crew/: crew.py  main.py
src/rag_crew/config/: agents.yaml  tasks.yaml
